utoipa-gen/tests/snapshots/path_derive__derive_into_params_flatten_with_rename_all.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: params
---
[
  {
    "in": "query",
    "name": "outerField",
    "required": true,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "inner_field",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
