utoipa-gen/tests/snapshots/path_derive__derive_into_params_flatten_with_skip.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: params
---
[
  {
    "in": "query",
    "name": "outer_field",
    "required": true,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "included_field",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
