utoipa-gen/tests/snapshots/path_derive__derive_into_params_with_serde_flatten.snap
---
source: utoipa-gen/tests/path_derive.rs
expression: params
---
[
  {
    "in": "query",
    "name": "outer_id",
    "required": true,
    "schema": {
      "format": "int64",
      "type": "integer"
    }
  },
  {
    "in": "query",
    "name": "outer_name",
    "required": false,
    "schema": {
      "type": "string"
    }
  },
  {
    "in": "query",
    "name": "inner_id",
    "required": true,
    "schema": {
      "format": "int64",
      "type": "integer"
    }
  },
  {
    "in": "query",
    "name": "inner_name",
    "required": true,
    "schema": {
      "type": "string"
    }
  }
]
